@@ -88,7 +88,15 @@
 </p>
 <ul data-sparkle-version="9.1.0">
     <li><span class="label label-success">Feature</span> Display transfer progress in Finder for downloads and uploads
-        (macOS) (#16568)
+        (macOS) (<a
+                target="_blank" href="https://trac.cyberduck.io/ticket/16568">#16568</a>)
+    </li>
+    <li><span class="label label-success">Feature</span> Show indeterminate progress when concatenating segments after
+        download transfer (<a
+                target="_blank" href="https://trac.cyberduck.io/ticket/13610">#13610</a>)
+    </li>
+    <li><span class="label label-success">Feature</span> Show indeterminate progress when waiting for large file upload
+        to complete (Backblaze B2, Box, OpenStack Swift, S3)
     </li>
     <li><span class="label label-warning">Bugfix</span> Multipart uploads fail to buckets with '.' character in name
         (S3) (<a
